--- a/src/main/webapp/admin/harrastajat/sopimukset.xhtml
+++ b/src/main/webapp/admin/harrastajat/sopimukset.xhtml
@@ -16,18 +16,18 @@
 	<ace:dataTable value="#{harrastaja.sopimukset}" var="_sopimus" selectionMode="single" rows="10" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" rowSelectListener="#{harrastajaAdmin.sopimusValittu}"
 		stateMap="#{harrastajaAdmin.sopimusRSM}">
-		<ace:column headerText="Tyyppi">
+		<ace:column headerText="Tyyppi" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.tyyppi.nimi}" />
 		</ace:column>
-		<ace:column headerText="Maksuväli">
+		<ace:column headerText="Maksuväli" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.maksuväli}" />
 		</ace:column>
-		<ace:column headerText="Umpeutuu">
+		<ace:column headerText="Umpeutuu" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.umpeutuu}">
 				<f:convertDateTime pattern="dd.MM.yyyy" />
 			</h:outputText>
 		</ace:column>
-		<ace:column headerText="Treenikertoja">
+		<ace:column headerText="Treenikertoja" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.treenikertoja}" />
 		</ace:column>
 	</ace:dataTable>
