--- a/src/main/webapp/admin/laskutus/laskuttamattomat.xhtml
+++ b/src/main/webapp/admin/laskutus/laskuttamattomat.xhtml
@@ -6,21 +6,21 @@
 	<ace:dataTable value="#{laskuttamattomat}" var="_sopimus" selectionMode="single" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" stateMap="#{laskutusAdmin.laskuttamattomatRSM}" rows="10"
 		rowSelectListener="#{laskutusAdmin.sopimusValittu}">
-		<ace:column headerText="Harrastaja">
+		<ace:column headerText="Harrastaja" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.harrastaja.nimi}" />
 		</ace:column>
-		<ace:column headerText="Tyyppi">
+		<ace:column headerText="Tyyppi" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.tyyppi.nimi}" />
 		</ace:column>
-		<ace:column headerText="Maksuväli">
+		<ace:column headerText="Maksuväli" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.maksuväli}" />
 		</ace:column>
-		<ace:column headerText="Umpeutuu">
+		<ace:column headerText="Umpeutuu" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.umpeutuu}">
 				<f:convertDateTime pattern="dd.MM.yyyy" />
 			</h:outputText>
 		</ace:column>
-		<ace:column headerText="Treenikertoja">
+		<ace:column headerText="Treenikertoja" styleClass="lefttext">
 			<h:outputText value="#{_sopimus.treenikertoja}" />
 		</ace:column>
 	</ace:dataTable>
