--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -18,7 +18,7 @@
 			<ace:dataTable value="#{kaikkiRoolit}" var="_rooli" selectionMode="single" rows="10" style="width:300px"
 				paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false"
 				rowSelectListener="#{perustietoAdmin.rooliValittu}" stateMap="#{perustietoAdmin.rooliRSM}">
-				<ace:column headerText="Rooli">
+				<ace:column headerText="Rooli" styleClass="lefttext">
 					<h:outputText value="#{_rooli.nimi}" />
 				</ace:column>
 			</ace:dataTable>
@@ -49,7 +49,7 @@
 				rendered="#{rooli != null and rooli.poistettavissa}">
 				<ace:dataTable value="#{rooliKäyttö}" var="_henkilö" rows="10" rendered="#{fn:length(rooliKäyttö) > 0}"
 					paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
-					<ace:column>
+					<ace:column styleClass="lefttext">
 						<h:outputText value="#{_henkilö.nimi}" />
 					</ace:column>
 				</ace:dataTable>
