--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -18,7 +18,7 @@
 			<ace:dataTable value="#{kaikkiSopimustyypit}" var="_sopimustyyppi" selectionMode="single" rows="10" paginator="true"
 				paginatorPosition="bottom" paginatorAlwaysVisible="false"
 				rowSelectListener="#{perustietoAdmin.sopimustyyppiValittu}" stateMap="#{perustietoAdmin.sopimustyyppiRSM}">
-				<ace:column headerText="Nimi">
+				<ace:column headerText="Nimi" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.nimi}" />
 				</ace:column>
 				<ace:column headerText="Jäsen">
@@ -48,28 +48,28 @@
 				<ace:column headerText="Voimassa">
 					<h:outputText value="#{_sopimustyyppi.oletusKuukaudetVoimassa}" />
 				</ace:column>
-				<ace:column headerText="Kertoja">
+				<ace:column headerText="Kertoja" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.oletusTreenikerrat}" />
 				</ace:column>
-				<ace:column headerText="Maksuväli">
+				<ace:column headerText="Maksuväli" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.oletusMaksuväli}" />
 				</ace:column>
 				<ace:column headerText="Laskutettava">
 					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.laskutettava}" />
 				</ace:column>
-				<ace:column headerText="Tuotekoodi">
+				<ace:column headerText="Tuotekoodi" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.tuotekoodi}" />
 				</ace:column>
-				<ace:column headerText="Hinta">
+				<ace:column headerText="Hinta" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.hinta}" />
 				</ace:column>
-				<ace:column headerText="Määrä">
+				<ace:column headerText="Määrä" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.määrä}" />
 				</ace:column>
-				<ace:column headerText="Yksikkö">
+				<ace:column headerText="Yksikkö" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.yksikkö}" />
 				</ace:column>
-				<ace:column headerText="Verokanta">
+				<ace:column headerText="Verokanta" styleClass="lefttext">
 					<h:outputText value="#{_sopimustyyppi.verokanta}" />
 				</ace:column>
 			</ace:dataTable>
