--- a/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
+++ b/src/main/webapp/admin/perustiedot/vyöarvot.xhtml
@@ -18,16 +18,16 @@
 			<ace:dataTable value="#{kaikkiVyöarvot}" var="_vyöarvo" selectionMode="single" rows="15"
 				rowSelectListener="#{perustietoAdmin.vyöarvoValittu}" paginator="true" paginatorPosition="bottom"
 				paginatorAlwaysVisible="false" stateMap="#{perustietoAdmin.vyöarvoRSM}">
-				<ace:column headerText="Vyöarvo">
+				<ace:column headerText="Vyöarvo" styleClass="lefttext">
 					<h:outputText value="#{_vyöarvo.nimi}" />
 				</ace:column>
-				<ace:column headerText="Minimikuukaudet">
+				<ace:column headerText="Minimikuukaudet" styleClass="lefttext">
 					<h:outputText value="#{_vyöarvo.minimikuukaudet}" />
 				</ace:column>
-				<ace:column headerText="Minimitreenit">
+				<ace:column headerText="Minimitreenit" styleClass="lefttext">
 					<h:outputText value="#{_vyöarvo.minimitreenit}" />
 				</ace:column>
-				<ace:column headerText="Järjestys">
+				<ace:column headerText="Järjestys" styleClass="lefttext">
 					<h:outputText value="#{_vyöarvo.järjestys}" />
 				</ace:column>
 			</ace:dataTable>
