--- a/src/main/webapp/käyttäjä/treenikäynnit.xhtml
+++ b/src/main/webapp/käyttäjä/treenikäynnit.xhtml
@@ -4,21 +4,21 @@
 	<ace:tabPane label="Treenikäynnit">
 		<ace:dataTable value="#{kohde.treenikäynnit}" var="_treenikäynti" rows="10" paginator="true" paginatorPosition="bottom"
 			paginatorAlwaysVisible="false">
-			<ace:column headerText="Aikaleima">
+			<ace:column headerText="Aikaleima" styleClass="lefttext">
 				<h:outputText value="#{_treenikäynti.aikaleima}">
 					<f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" timeZone="EET" />
 				</h:outputText>
 			</ace:column>
-			<ace:column headerText="Päivä">
+			<ace:column headerText="Päivä" styleClass="lefttext">
 				<h:outputText value="#{_treenikäynti.treenisessio.treeni.päivä}" />
 			</ace:column>
-			<ace:column headerText="Treeni">
+			<ace:column headerText="Treeni" styleClass="lefttext">
 				<h:outputText value="#{_treenikäynti.treenisessio.treeni.nimi}" />
 			</ace:column>
-			<ace:column headerText="Tyyppi">
+			<ace:column headerText="Tyyppi" styleClass="lefttext">
 				<h:outputText value="#{_treenikäynti.treenisessio.treeni.tyyppi.nimi}" />
 			</ace:column>
-			<ace:column headerText="Aika">
+			<ace:column headerText="Aika" styleClass="lefttext">
 				<h:panelGrid columns="3">
 					<h:outputText value="#{_treenikäynti.treenisessio.treeni.alkaa}">
 						<f:convertDateTime pattern="HH:mm" />
@@ -29,7 +29,7 @@
 					</h:outputText>
 				</h:panelGrid>
 			</ace:column>
-			<ace:column headerText="Vetäjä">
+			<ace:column headerText="Vetäjä" styleClass="lefttext">
 				<ui:repeat value="#{_treenikäynti.treenisessio.vetäjät}" var="_vetäjä">
 					<h:outputText value="#{_vetäjä.nimi}" />
 					<br />
