--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -5,8 +5,9 @@
 		immediate="true">
 		<f:ajax render="@form" />
 	</h:commandButton>
-	<h:button outcome="/tuo.xhtml" image="/kuvat/tuo.png" immediate="true" styleClass="ikoni" rendered="#{harrastaja.ylläpitäjä}"/>
-	
+	<h:button outcome="/tuo.xhtml" image="/kuvat/tuo.png" immediate="true" styleClass="ikoni"
+		rendered="#{harrastaja.ylläpitäjä}" />
+
 	<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" stateMap="#{harrastajaAdmin.harrastajaRSM}" rows="10"
 		rowSelectListener="#{harrastajaAdmin.harrastajaValittu}">
@@ -21,11 +22,12 @@
 		<ace:column headerText="Ikä" styleClass="lefttext">
 			<h:outputText value="#{_harrastaja.ikä}" />
 		</ace:column>
-		<ace:column headerText="Sukupuoli" styleClass="lefttext">
-			<h:outputText value="#{_harrastaja.sukupuoli.nimi}" />
+		<ace:column headerText="Sukupuoli">
+			<h:graphicImage value="/kuvat/uros.png" style="height:40px" rendered="#{_harrastaja.mies}"/>
+			<h:graphicImage value="/kuvat/naaras.png" style="height:40px" rendered="#{_harrastaja.nainen}"/>
 		</ace:column>
-		<ace:column headerText="Vyöarvo" styleClass="lefttext">
-			<h:outputText value="#{_harrastaja.tuoreinVyöarvo.nimi}" />
+		<ace:column headerText="Vyöarvo">
+			<h:graphicImage value="/kuvat/vyöt/#{_harrastaja.tuoreinVyöarvo.id}.png" style="height:40px" rendered="#{_harrastaja.tuoreinVyöarvo.id != 0}"/>
 		</ace:column>
 		<ace:column headerText="Maksut" styleClass="lefttext">
 			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.sopimuksetOK}" />
