--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -20,7 +20,7 @@
 			<h:outputText value="#{_harrastaja.sukunimi}" />
 		</ace:column>
 		<ace:column headerText="Ikä" styleClass="lefttext">
-			<h:outputText value="#{_harrastaja.ikä}" />
+			<h:outputText value="#{_harrastaja.ikä}" rendered="#{_harrastaja.ikä != 0}"/>
 		</ace:column>
 		<ace:column headerText="Sukupuoli">
 			<h:graphicImage value="/kuvat/uros.png" style="height:40px" rendered="#{_harrastaja.mies}"/>
