--- a/src/main/webapp/kirjautuminen.xhtml
+++ b/src/main/webapp/kirjautuminen.xhtml
@@ -34,6 +34,7 @@
 </h:head>
 <h:body onload="document.getElementById('form:käyttäjänimi').focus();">
 	<f:view>
+		<ace:growlMessages/>	
 		<h:form id="form">
 			<ace:panel header="Kirjaudu" styleClass="taulu">
 				<h:panelGrid columns="2">
