--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -58,6 +58,11 @@
 					<ace:message for="form:arkistoitu" />
 					<h:selectBooleanCheckbox value="#{harrastaja.arkistoitu}" id="arkistoitu" />
 				</h:panelGrid>
+				<h:outputText value="Infotiskille"/>
+				<h:panelGrid>
+					<ace:message for="form:infotiskille" />
+					<h:selectBooleanCheckbox value="#{harrastaja.infotiskille}" id="infotiskille" />
+				</h:panelGrid>
 			</h:panelGrid>
 		</ace:panel>
 		<h:panelGrid>
